--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 **/.terraform/*
 **/private-key/*
 **/code/private-key/terraform-key.pem
+**/*.pem
+**/private-key/*.pem
 # .tfstate files
 *.tfstate
 *.tfstate.*
